adding benchmarks